# Projet_Mopsi

./: .gitignore  Main.py  Poster_1.pptx  Poster_TdLOG.pptx  README.md  Tests.xlsx  V1.rar  cc.txt  readMe.txt  testab.py  uml.xlsx
CalculDeterministe/: DonneesPuzzle5.txt  FormatEnregistrementSolutionsCSV.txt  exempleFormatDonnees.txt  puzzleReel.txt
CalculDeterministe/Source/: CMakeLists.txt  algo.cpp  algo.h  ecriture.cpp  ecriture.h  graphique.cpp  graphique.h  main.cpp  matrice.cpp  matrice.h  piece.cpp  piece.h  puzzles.cpp  puzzles.h  test.cpp  test.h
Images/: test_graph.py
appli/: Controller.py  Screen.py  ScreenBis.py  ScreenCalculation.py  ScreenQuad.py  ScreenTer.py
code/: Classes.py  Fonctions.py  Pieces.py
codes/: Classes.py  Fonctions.py  Pieces.py  communication.py
